Migrate to Codeberg (issue #2271)

--- a/README.org
+++ b/README.org
@@ -1,10 +1,10 @@
 * simple-parallel-tasks
 
-Common Lisp library to evaluate some forms in parallel.
+Simple parallel task execution library
 
+|---------+----------------------------------------------------------------|
+| source  | git:https://codeberg.org/glv/simple-parallel-tasks.git        |
+| commit  | 5cf7428                                                        |
+| systems | simple-parallel-tasks                                          |
+|---------+----------------------------------------------------------------|
 
-|---------+--------------------------------------------------------|
-| source  | git:https://codeberg.org/glv/simple-parallel-tasks.git |
-| commit  | ce7b60f                                                |
-| systems | simple-parallel-tasks                                  |
-|---------+--------------------------------------------------------|
